# cwe-xml

./: .gitignore  Cargo.toml  README.md
data/: simple.xml
examples/: cwe.rs
src/: categories.rs  content_history.rs  errors.rs  external_references.rs  lib.rs  notes.rs  structured_text.rs  views.rs  weaknesses.rs
src/cwe/: categories.rs  content_history.rs  mod.rs  notes.rs  relationships.rs  views.rs  weakness_catalog.rs  weaknesses.rs
